projects/vishnu-it-solutions/k8s/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: vishnu-website
  namespace: dev

spec:
  replicas: 3

  selector:
    matchLabels:
      app: vishnu-website

  template:
    metadata:
      labels:
        app: vishnu-website

    spec:
      containers:
      - name: website-container
        image: vishnu-it-solutions:latest
        imagePullPolicy: Never

        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "500m"
            memory: "256Mi"
        
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
