projects/vishnu-it-solutions/k8s/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: vishnu-website-service
  namespace: dev 

spec:
  type: NodePort

  selector:
    app: vishnu-website

  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
