projects/vishnu-it-solutions/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: website-ingress
  namespace: dev

spec:
  ingressClassName: nginx

  rules:
  - host: vishnu.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: vishnu-website-service

            port:
              number: 80
